// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-css-modules should create valid app 1`] = `
SOURCE HTML: 
<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="/main-bfe8911084b821bf8edd.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/runtime-135ea29ecc719f03a91d.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~main-ebc0059b8e6723cbd264.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/main-1b5c19b44d983b352e4c.js"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo Jlnxw97">
        <div class="_3YtmnHj lwsthgY"
             data-automation-text="true"
        >
          Initial render
        </div>
      </div>
    </div>
    <script>
      window.__LOADABLE_REQUIRED_CHUNKS__ = [];
    </script>
    <script async
            data-chunk="main"
            src="/runtime-135ea29ecc719f03a91d.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~main-ebc0059b8e6723cbd264.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/main-1b5c19b44d983b352e4c.js"
    >
    </script>
  </body>
</html>

POST HYDRATE DIFFS: 
         <div class="_3YtmnHj lwsthgY"
              data-automation-text="true"
         >
-          Initial render
+          Updated render
         </div>
       </div>
     </div>

`;

exports[`react-css-modules should generate the expected files 1`] = `
Object {
  "index.html": 
<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <title>
      My Awesome Project
    </title>
    <meta name="viewport"
          content="width=device-width, initial-scale=1"
    >
    <link data-chunk="main"
          rel="stylesheet"
          href="/main-bfe8911084b821bf8edd.css"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/runtime-135ea29ecc719f03a91d.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/vendors~main-ebc0059b8e6723cbd264.js"
    >
    <link data-chunk="main"
          rel="preload"
          as="script"
          href="/main-1b5c19b44d983b352e4c.js"
    >
  </head>
  <body>
    <div id="app">
      <div class="_1brbpTo Jlnxw97">
        <div class="_3YtmnHj lwsthgY"
             data-automation-text="true"
        >
          Initial render
        </div>
      </div>
    </div>
    <script>
      window.__LOADABLE_REQUIRED_CHUNKS__ = [];
    </script>
    <script async
            data-chunk="main"
            src="/runtime-135ea29ecc719f03a91d.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/vendors~main-ebc0059b8e6723cbd264.js"
    >
    </script>
    <script async
            data-chunk="main"
            src="/main-1b5c19b44d983b352e4c.js"
    >
    </script>
  </body>
</html>
,
  "main-1b5c19b44d983b352e4c.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main-bfe8911084b821bf8edd.css": ._1brbpTo {
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}
._1brbpTo ._3YtmnHj {
  font-size: 32px;
}
.Jlnxw97 {
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}
.Jlnxw97 .lwsthgY {
  color: red;
}
,
  "runtime-135ea29ecc719f03a91d.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-ebc0059b8e6723cbd264.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;
